tdf#158504: fix 'applied' for page styles

Here is how checking for a used page style used to work before 140079362502408c75ceee67e86d779f61c0ac1b:
- SwDocStyleSheet::IsUsed called SwDoc::IsUsed on the page style
- ... that used to call GetInfo on the SwPageDesc
- ... which then called GetInfo on Master, Left, ... (SwFrameFormats)
- ... which then ends up in a SwPageFrame which confirms the page style
  to be in use

To get this to work again after 140079362502408c75ceee67e86d779f61c0ac1b,
one would need to reimplement the forwarding in SwFrameFormat (and the
other intermediates). However, instead of replicating that encapsulation
breaking maintenance nightmare, we instead:
- introduce a properly named SwPageDesc::IsUsed
- which directly calls SwFrameFormat::IsUsed
- use that in SwDocStyleSheet::IsUsed
- and then assert in SwDoc::IsUsed if called on random types (as
  essentially most of Writer derives from sw::BroadcastingModify in some
  way)

Change-Id: I4ca300af61a1f2af383ef2b7ded32ddbee6ec975
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171088
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 06dec3ba4f508798822b63aeae46e8b0ec6d6d70)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172127
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>